--- a/symbols.tex
+++ b/symbols.tex
@@ -1,4 +1,4 @@
-\nomenclature[01]{\(  \mathcal{L}  \)}{Instantaneous luminosity of a collider.}
+\nomenclature[01]{\(  L  \)}{Instantaneous luminosity of a collider.}
 \nomenclature[02]{\(f_\mathrm{rev}\), $\omega_\mathrm{rev}$}{Revolution frequency of the machine in [Hz] and in [rad/s] respectively.} 
 \nomenclature[03]{\(\sigma_x\),  \(\sigma_y\)}{Horizontal and vertical rms beam size in [m].} 
 \nomenclature[04]{$\sigma_z$, $\sigma_t$, $\sigma_\phi$}{rms bunch length in units of [m], [s] and [rad] respectively.} 
@@ -12,7 +12,7 @@
 \nomenclature[12]{$E_0, p_0, v_0$}{Reference energy, momentum and velocity.}
 \nomenclature[13]{$\beta_0, \gamma_0$}{Relativistic beta and gamma (Lorentz factor).}
 \nomenclature[14]{$e$, $m_p$}{The proton charge and rest mass respectively.}
-\nomenclature[15]{$\rho$}{Bending radius.}
+\nomenclature[15]{$\rho$}{Local bending radius.}
 \nomenclature[16]{$c$}{Speed of light in vaccum.}
 \nomenclature[17]{$s$}{Location along the ring.}
 \nomenclature[18]{$(x, x^\prime)$}{Horizontal co-ordinates: position and normalised  momentum to the momentum of the reference particle in units of [m] and [rad] respectively.} % or conjugate momentum, M. Schenl
@@ -33,7 +33,7 @@
 \nomenclature[33]{$\epsilon^{\mathrm{geom}}_x$, $\epsilon^{\mathrm{geom}}_y$}{Horizontal and vertical geometric emittance of the beam.} 
 \nomenclature[34]{$\epsilon_x$, $\epsilon_y$}{Horizontal and vertical normalised emittance of the beam.} 
 \nomenclature[35]{$D_x$, $D_y$}{Horizontal and vertical dispersion functions.} 
-\nomenclature[36]{$Q_x^{(n)}$, $Q_y^{(n)}$}{Horizontal and vertical chromaticity of nth order.} 
+\nomenclature[36]{$Q_x^{(n)}$, $Q_y^{(n)}$}{Horizontal and vertical chromaticity of n$^\mathrm{th}$ order.} 
 \nomenclature[37]{$Q_x^{\prime}$, $Q_x^{\prime \prime}$}{Horizontal chromaticity first and second order respectively.} 
 \nomenclature[38]{$Q_y^{\prime}$, $Q_y^{\prime \prime}$}{Vertical chromaticity first and second order respectively.} 
 \nomenclature[39]{$\alpha_{xx}$, $\alpha_{yy}$, $\alpha_{xy}$}{Horizontal, vertical and cross-term detuning coefficients respectively in units of [1/m].} 
