update on glossary

--- a/foo.sty
+++ b/foo.sty
@@ -1,4 +1,4 @@
-\newglossaryentry{foobar}{%
-  name={Foobar},
-  description={A strange animal, not to be confused with}
+\newglossaryentry{cern}{%
+  name={CERN},
+  description={European Organisation of Nuclear Research}
 }
