--- a/main.tex
+++ b/main.tex
@@ -162,12 +162,14 @@
 \chapter{Measurements from experimental studies in 2022}\label{ch:app_measurments_22}
 \input{appendix/appendix_e}
 
-\chapter{Glossary and defintions}
-\input{appendix/glossary}
+%\chapter{Glossary and defintions}
+%\input{appendix/glossary}
 
 \clearpage
-\printglossaries
+%\printglossaries
+%\printglossary[type=main,style=long,nonumberlist]
 
+\printglossary[nonumberlist]
 
 \backmatter
 \printbibliography
