--- a/main.tex
+++ b/main.tex
@@ -69,9 +69,7 @@
 \setlength{\nomlabelwidth}{3.5cm} % adjust the width between symbols and notation
 \renewcommand{\nomname}{List of Symbols}
 
-\makeglossaries
-%\loadglsentries{foo}
-\usepackage{foo}
+
 
 
 \begin{document}
@@ -111,8 +109,11 @@
 
 \input{symbols.tex}
 \printnomenclature
-\addcontentsline{toc}{chapter}{List of symbols v2}
+\addcontentsline{toc}{chapter}{List of symbols}
 
+
+
+\input{glossary.tex}
 
 
 \mainmatter
@@ -149,6 +150,8 @@
 \chapter{Conclusions}\label{Ch:conclusions}
 \input{chapters/chapter09}
 
+
+
 % The end matter
 \appendix
 \chapter{Definitions and  methods of statistical analysis}\label{ch:app_A}
@@ -162,14 +165,6 @@
 \chapter{Measurements from experimental studies in 2022}\label{ch:app_measurments_22}
 \input{appendix/appendix_e}
 
-%\chapter{Glossary and defintions}
-%\input{appendix/glossary}
-
-\clearpage
-%\printglossaries
-%\printglossary[type=main,style=long,nonumberlist]
-
-\printglossary[nonumberlist]
 
 \backmatter
 \printbibliography
