finalise list of acronmys

--- a/glossary.tex
+++ b/glossary.tex
@@ -1,5 +1,5 @@
-\chapter*{List of Abbreviations}
-\addcontentsline{toc}{chapter}{List of Abbreviations}
+\chapter*{List of Acronyms}
+\addcontentsline{toc}{chapter}{List of Acronyms}
 
 %\vspace{0.5cm}
 
@@ -7,23 +7,87 @@
 %\begin{center}
 \begin{tabular}{l l}
 
-\textbf{ADM} & \qquad\qquad\qquad Arnowitt–Deser–Misner \\
-\textbf{BH} & \qquad\qquad\qquad black-hole \\
-\textbf{CFC} & \qquad\qquad\qquad conformal flatness condition \\
-\textbf{EoS} & \qquad\qquad\qquad equation of state \\
-\textbf{FF} & \qquad\qquad\qquad fitting factor \\
-\textbf{GW}  & \qquad\qquad\qquad gravitational wave\\
-\textbf{ID} & \qquad\qquad\qquad initial data\\
-\textbf{NS} & \qquad\qquad\qquad neutron star\\
-\textbf{PCA} & \qquad\qquad\qquad principal component analysis\\
-\textbf{QC} & \qquad\qquad\qquad quasi-circular\\
-\textbf{SPH} & \qquad\qquad\qquad smooth particle hydrodynamics\\
-\textbf{RK} & \qquad\qquad\qquad Runge-Kutta \\
-\textbf{WENO} & \qquad\qquad\qquad weighted essentially non-oscillatory\\
+\textbf{ABWLM} & \qquad\qquad\qquad A: RF, B: Beam , W: Wideband, L: Longitudinal, M: Measurement \\
+\textbf{AD} & \qquad\qquad\qquad Anti-proton Decelerator\\
+\textbf{ADT} & \qquad\qquad\qquad LHC Transverse Damper\\
+
+\textbf{AWAKE} & \qquad\qquad\qquad Wakefield Acceleration Experiment\\
+
+
+
+\textbf{ALICE} & \qquad\qquad\qquad A Large Ion Collider Experiment \\
+\textbf{ATLAS} & \qquad\qquad\qquad A Toroidal LHC Apparatus \\
+
+
+\textbf{BBQ} & \qquad\qquad\qquad Base-band tune measurement system \\
+\textbf{BCT} & \qquad\qquad\qquad Beam Current Transformer \\
+\textbf{BPM} & \qquad\qquad\qquad Beam Position Monitor\\
+
+\textbf{CERN} & \qquad\qquad\qquad European Organisation of Nuclear Research \\
+\textbf{CC} & \qquad\qquad\qquad Crab Cavity \\
+\textbf{CMS} & \qquad\qquad\qquad Compact Muon Solenoid \\
+
+\textbf{DC} & \qquad\qquad\qquad Direct Current \\
+\textbf{DQW} & \qquad\qquad\qquad Double-Quarter Wave \\
+
+
+\textbf{FBCT} & \qquad\qquad\qquad Fast Beam Current Transformer \\
+\textbf{FFT} & \qquad\qquad\qquad Fast Fourier Transform \\
+\textbf{GPU} & \qquad\qquad\qquad Graphics Processing Unit  \\
+
+\textbf{HL-LHC} & \qquad\qquad\qquad High-Luminosity Large Hadron Collider \\
+\textbf{HT monitor} & \qquad\qquad\qquad Head-Tail monitor \\
+
+\textbf{IEEE} & \qquad\qquad\qquad Institute of Electrical and Electronics Engineers \\
+
+\textbf{ISOLDE} & \qquad\qquad\qquad Online Isotope Mass Separator \\
+
+
+\textbf{Linac4} & \qquad\qquad\qquad Linear accelerator 4 \\
+\end{tabular}
+%\end{center}
+\end{flushleft}
+
+
+\newpage
+
+\begin{flushleft}
+  %\begin{center}
+  \begin{tabular}{l l}
+  
+\textbf{LIU} & \qquad\qquad\qquad LHC Injectors Upgrade \\
+\textbf{LHC} & \qquad\qquad\qquad Large Hadron Collider \\
+
+\textbf{LOF} & \qquad\qquad\qquad SPS Landau Octupole for Focusing \\
+\textbf{LOD} & \qquad\qquad\qquad SPS Landau Octupole for Defocusing \\
+
+\textbf{LSA} & \qquad\qquad\qquad LHC Software Architecture \\
+
+
+\textbf{NAFF} & \qquad\qquad\qquad Algorithm of Numerical Analysis of Fundamental Frequencies \\
+
+\textbf{RF} & \qquad\qquad\qquad Radio-Frequency \\
+\textbf{RFD} & \qquad\qquad\qquad RF dipole \\
+\textbf{rms} & \qquad\qquad\qquad Root mean square \\
+
+\textbf{PM} & \qquad\qquad\qquad Photomultiplier \\
+\textbf{PS} & \qquad\qquad\qquad Proton Synchrotron \\
+\textbf{PSD} & \qquad\qquad\qquad Power Spectral Density \\
+\textbf{PSB} & \qquad\qquad\qquad Proton Synchrotron Booster \\
+\textbf{SPS} & \qquad\qquad\qquad Super Proton Synchrotron \\
+
+
+\textbf{HL-LHC} & \qquad\qquad\qquad High-Luminosity Large Hadron Collider \\
+
+\textbf{WCM} & \qquad\qquad\qquad Wall Current Monitor \\
+\textbf{WS} & \qquad\qquad\qquad Wire Scanners \\
+
+
 
 \end{tabular}
 %\end{center}
 \end{flushleft}
+
 
 %\vspace{0.5cm}
 
