--- a/main.tex
+++ b/main.tex
@@ -70,6 +70,10 @@
 \renewcommand{\nomname}{List of Symbols}
 
 
+\fancypagestyle{mystyle_acronyms}{%
+    \lhead{\textbf{0. List of Acronyms}}
+}
+
 
 
 \begin{document}
@@ -81,7 +85,7 @@
 {\large Thesis submitted in accordance with the requirements of the University of Liverpool for the degree of Doctor in Philosophy \\ by}
 }
 \author{ Natalia Triantafyllou}
-\date{Day Month Year}
+\date{31 October 2022}
 \maketitle
 \newpage
 
@@ -110,11 +114,13 @@
 \input{symbols.tex}
 \printnomenclature
 \addcontentsline{toc}{chapter}{List of symbols}
+%\lhead{\leftmark}
 
 
+\newpage
 
 \input{glossary.tex}
-
+\thispagestyle{mystyle_acronyms}
 
 \mainmatter
 
