--- a/head/abstract.tex
+++ b/head/abstract.tex
@@ -6,7 +6,7 @@
 % put your text here
 
 
-High-Luminosity LHC (HL-LHC) is the upgrade of the Large Hadron Collider (LHC)  machine which aims to increase significantly the luminosity at the experiments in order to extend its potential for discoveries. Crab cavities are a key component of the HL-LHC upgrade, as they will be employed to mitigate the luminosity reduction induced by the crossing angle at the interaction points of ATLAS and CMS. 
+Thr High-Luminosity LHC (HL-LHC) is the upgrade of the Large Hadron Collider (LHC)  machine which aims to increase significantly the luminosity at the experiments in order to extend its potential for discoveries. Crab Cavities are a key component of the HL-LHC upgrade, as they will be employed to mitigate the luminosity reduction induced by the crossing angle at the interaction points of ATLAS and CMS. 
 
 
 Two prototype Crab Cavities have been installed in the Super Proton Synchrotron (SPS), prior to their installation in the LHC, in order to be tested for the first time with proton beams. An important point to consider is the undesired transverse emittance growth due to noise in their RF system. The experimental tests in the SPS showed that the effects of the beam transverse impedance play an important role in the emittance growth driven by Crab Cavity RF noise. This thesis investigates this interplay with detailed tracking simulations and experimental measurements. The implications for the HL-LHC are also discussed.
