--- a/appendix/appendix_HT_monitor.tex
+++ b/appendix/appendix_HT_monitor.tex
@@ -136,3 +136,21 @@ It should be noted here, that the measured intra-bunch offset, $\Delta y_{, HT}$
 %       \label{fig:crabbing_reconstruction_HT_monitor}
 %\end{figure}
    
+
+
+\section{Head-Tail monitor calibration for the 2022 analysis}\label{sec:HT_calibration_2022}
+
+\textcolor{red}{This should be moved in HT monitor appendix.}
+
+To give the measured intra-bunch offset (during the SPS CC tests) in units of millimeters, the Head-Tail monitor response is calibrated by performing orbit bumps (around the reference orbit) and measuring the normalised position\footnote{It is calculated as the difference signal divided by sum signal.} of the bunch in the vertical plane (plane of interest). More details on the calibration procedure are given in~\cite{PhysRevAccelBeams.22.112803}. 
+
+
+The calibration of the Head-Tail monitor response that took place in November 2021, is shown in Fig.~\ref{fig:HT_calibration_2022_levens}. After applying a linear fit to the measured data, it was found that a normalised position of 0.1037 corresponds to 1\,mm.
+
+
+\begin{figure}[!h] % Email communication with T. Levens on 8 November 2021.
+    \centering         
+    \includegraphics[width=0.7\textwidth]{images/Ch8/HT_monitor_calibration_2022.png}
+        \caption{Calibration of Head-Tail monitor from November 2021. This plot is courtesy of T.~Levens.}
+        \label{fig:HT_calibration_2022_levens}
+ \end{figure}
