--- a/appendix/appendix_b.tex
+++ b/appendix/appendix_b.tex
@@ -225,7 +225,7 @@ At this point it is worth elaborating on the computation of the power spectral d
 
 In Chapter~\ref{Ch:CC_noise_theory} it was discussed that the noise effects are modeled as kicks which update the angle co-ordinates of the particles and which are applied to them once per turn and thus they consist of a discrete-time signal. The power spectral density of that noise signal is given by Eq.~\eqref{eq:autocorrelation_zero_lag_discrete}.  Now, given the fact that in an accelerator the particles receive the noise kicks once per turn, the sampling frequency, $f_s$ equals the revolution frequency of the machine, $\frev$. This means that the frequency resolution, $\Delta f$, can be written as $\Delta f = f_s/N = \frev/N$, where $N$ is the number of samples (or size) in the noise signal. 
 
-Furthermore, the studies consider white noise, which is a random signal with the same amplitude (intensity) at all the frequencies which results in a uniform power spectral density. The white noise can be treated in the discrete-time domain as a sequence of uncorrelated random variables taken from a Gaussian distribution with mean zero and finite standard deviation, $\sigma_\mathrm{white}$.  Since by definition the power spectral density is the same in every frequency, Eq.~\eqref{eq:autocorrelation_zero_lag_discrete} is re-written as:
+Furthermore, the studies consider white noise, which is a random signal with the same amplitude (intensity) at all the frequencies which results in a uniform power spectral density. The white noise can be treated in the discrete-time domain as a sequence of uncorrelated random variables taken from a Gaussian distribution with mean zero and finite standard deviation, $\sigma_\mathrm{white}$.  Since by definition the power spectral density (for white noise signal) is the same in every frequency, Eq.~\eqref{eq:autocorrelation_zero_lag_discrete} is re-written as:
 \begin{equation}\label{eq:psd_for_white_noise_variance_v0}
     \sigma_\mathrm{white}^2 =  N S_{yy}(f_k) \frev/N = S_{yy}(f_k) \frev,
 \end{equation}
@@ -235,7 +235,7 @@ which becomes:
 \end{equation}
 
 
-In other words, the power spectral density at a given frequency, $f_k$, for a white noise spectrum modeled as described above, equals the variance of the noise signal over the revolution frequencyin the synchrotron.
+In other words, the power spectral density at a given frequency, $f_k$, for a white noise spectrum modeled as described above, equals the variance of the noise signal over the revolution frequency in the synchrotron.
 
 %\section{Measuring amplitude and phase noise}\label{app:Measured_noise}
 %Amplitude and phase modulation are two of the main types of noise in the output signal of an oscillator. The instantaneous output voltage of an ideal oscillator can be expressed as:
@@ -299,14 +299,16 @@ In other words, the power spectral density at a given frequency, $f_k$, for a wh
 
 \section{Applying a measured noise spectrum in numerical simulations}\label{sec:measured_spectra_to_time_series}
 
-The goal of this section is to describe how one can convert the measured noise spectrum from a spectrum analyzer to a discrete time series that can be used in numerical simulations. 
+The goal of this section is to describe how one can convert the measured noise spectrum from a spectrum analyzer to a discrete time series that can be used in numerical simulations. Recall, that the phase and amplitude noise are modeled in the tracking simulations as sequences of noise kicks which change the transverse angle co-ordinate of the particles each turn (see  Eqs.~\eqref{eq:amplitude_noise_kick},~\eqref{eq:phase_noise_kick} and~\eqref{eq:CC_kick_sixtracklib_vertical_noise}).
 
 
 
-\subsection{Crab cavity noise in numerical simulations}
-As discussed in Chapter~\ref{Ch:CC_noise_theory} the phase and amplitude noise are modeled as sequences of noise kicks which are applied to the CC voltage every turn.
+%\subsection{Crab cavity noise in numerical simulations}
+%As discussed in Chapter~\ref{Ch:CC_noise_theory} the phase and amplitude noise are modeled in the tracking simulatiosn as sequences of noise kicks which change the transverse angle co-ordinate of the particles each turn. These discrete time series can be representated by $\alpha_n = \alpha(n\Delta t)$ and  $\phi_n = \phi(n\Delta t)$ for amplitude and phase noise, respectively, where  $n \in \left [1, N_\mathrm{turns}-1 \right ]$ and $N_\mathrm{turns}$ is the number of turns in the simulation.
 
-These discrete time series will be representated by $\alpha_n = \alpha(n\Delta t)$ and  $\phi_n = \phi(n\Delta t)$ for amplitude and phase noise, respectively, where  $n \in \left [1, N_\mathrm{turns}-1 \right ]$ and $N_\mathrm{turns}$ is the number of turns in the simulation. Since in the simulations the beam encounters the phase or amplitude noise kicks once per turn, the sampling frequency of the noise spectra $f_s$ equals the revolution frequency (see discussion in Chapter~\ref{Ch:investigating_discrepancy}). For, the SPS $f_s=\frev=43/73$ \,kHz. Hence, the sampling interval should be $\Delta t=1/f_s = 1/\frev \approx$ 23 $\mathrm{\mu s}$.  
+
+
+%Since in the simulations the beam encounters the phase or amplitude noise kicks once per turn, the sampling frequency of the noise spectra $f_s$ equals the revolution frequency (see discussion in Chapter~\ref{Ch:investigating_discrepancy}). For, the SPS $f_s=\frev=43/73$ \,kHz. Hence, the sampling interval should be $\Delta t=1/f_s = 1/\frev \approx$ 23 $\mathrm{\mu s}$.  
 
 
 %, representated by 
@@ -328,24 +330,32 @@ These discrete time series will be representated by $\alpha_n = \alpha(n\Delta t
 
 
 
+%\subsection{Crab cavity noise in numerical simulations}
+%As follows from the discussion in section~\ref{subsec:Measured_noise}, phase and amplitude noise can be represented by discrete time series $\phi_n = \phi(n\Delta t)$ and  $\alpha_n = \alpha(n\Delta t)$ respectively, so that the crab cavity (CC) instantaneous voltage is given by:
+%\begin{equation}\label{eq:CC_PN_AN}
+%    \VCC (n \Delta t) =  V_0(1+\alpha(n \Delta t)) \sin{(2\pi f_0 n \Delta t + \phi(n \Delta t)},
+%\end{equation}
+%where $V_0$ and $f_0$ are the nominal crab cavity voltage and frequency respectively, $n \in \left [1, N-1 \right ]$ and $N$ is the number of samples.
 
-\subsection{Crab cavity noise in numerical simulations}
-As follows from the discussion in section~\ref{subsec:Measured_noise}, phase and amplitude noise can be represented by discrete time series $\phi_n = \phi(n\Delta t)$ and  $\alpha_n = \alpha(n\Delta t)$ respectively, so that the crab cavity (CC) instantaneous voltage is given by:
-\begin{equation}\label{eq:CC_PN_AN}
-    \VCC (n \Delta t) =  V_0(1+\alpha(n \Delta t)) \sin{(2\pi f_0 n \Delta t + \phi(n \Delta t)},
-\end{equation}
-where $V_0$ and $f_0$ are the nominal crab cavity voltage and frequency respectively, $n \in \left [1, N-1 \right ]$ and $N$ is the number of samples.
-
-In numerical simulations, $N$ is taken to be equal to the number of turns in the simulation. The total time simulated is $T=N \Delta t$, where $\Delta t$ is the sampling interval. Since the phase and amplitude noise are sequences of noise kicks which are applied to the CC voltage every turn, $\Delta t$ is equal to the time needed for one turn around the machine. For the SPS, with a revolution frequency $\frev = $43.38 kHz, $\Delta t=1/f_s = 1/\frev \approx$ 23 $\mathrm{\mu s}$. 
+%In numerical simulations, $N$ is taken to be equal to the number of turns in the simulation. The total time simulated is $T=N \Delta t$, where $\Delta t$ is the sampling interval. Since the phase and amplitude noise are sequences of noise kicks which are applied to the CC voltage every turn, $\Delta t$ is equal to the time needed for one turn around the machine. For the SPS, with a revolution frequency $\frev = $43.38 kHz, $\Delta t=1/f_s = 1/\frev \approx$ 23 $\mathrm{\mu s}$. 
 %%%%%%%%%%%
+
 \subsection{Measured noise spectrum}
-In the experiment performed in 2018, the amplitude and phase noise levels were measured with a spectrum analyser E5052B~\cite{E5052B_insight} and are expressed in terms of the quantity $10\log_{10}\mathcal{L}(f_k)$\,[dBc/Hz] (see section \ref{subsec:Measure_noise}). Figure~\ref{fig:coast1_setting2_a} shows an example of a phase noise spectrum acquired during the experiment, and which extends from 1 kHz to 10 MHz. The spectral lines observed at high frequencies correspond to harmonics of the revolution frequency. 
+
+As discussed in Section~\ref{sec:injected_RF_noise}, the noise spectra discussed in this thesis, were measured with a spectrum analyzer E5052B~\cite{E5052B_insight} and are expressed as $10\log_{10}\mathcal{L}(f)$\,[dBc/Hz], where $\mathcal{L}(f)$ follows the IEEE definitions in~\cite{IEEE:4797525}. Recall that $\mathcal{L}(f)$ as defined in~\cite{IEEE:4797525} is two-sided, which means that it has both positive and negative frequencies and as a real signal is symmetric around the DC component, $f=0$\,Hz. However, since the spectrum analyser E5052B displays the logarithmic quantity $10\log_{10}\mathcal{L}(f)$ only the positive frequencies are displayed (see Fig.~\ref{fig:coast1_setting2_a}).
+
+The relation between the measured noise levels and the power spectral densities in Eq.~\eqref{eq:dey_an} and Eq.~\eqref{eq:dey_pn} following the IEEE conventions~\cite{IEEE:4797525} is given by $S_{\Delta A, \Delta \phi}(f) = \mathcal{L}(f)$ (see Table A.1 in~\cite{IEEE:4797525}), with $S_{\Delta A}$ in\,Hz$^{-1}$ and $S_{\Delta \phi}$ in $\mathrm{rad^2 Hz^{-1}}$. 
+
 
 \subsection{Generating time series}\label{subsec:generatin_noise_kicks}
-In the following, the steps required to generate the discrete time series $\alpha_n$ and $\phi_n$ from the measured noise spectrum are discussed. The procedure involves converting the measured noise power to the two-sided power spectral density $S_\phi(f_k)$ and then using the inverse Fourier transform to produce the discrete-time series of noise kicks. In detail, the steps are as follows:
+%In the following, the steps required to generate the discrete time series $\alpha_n$ and $\phi_n$ from the measured noise spectrum are discussed. The procedure involves converting the measured noise power to the two-sided power spectral density $S_\phi(f_k)$ and then using the inverse Fourier transform to produce the discrete-time series of noise kicks. In detail, the steps are as follows:
+In the following the steps required to generate the discrete-time series from an example phase noise spectra measured during the $\CC$ tests in SPS in 2018 are discussed (see Fig.~\ref{fig:coast1_setting2_a}). Note that the steps are the same for an amplitude noise spectra. The procedure involves converting the measured noise power to the power spectral density and then using the inverse Fourier transform to produce the discrete-time series of noise kicks. In detail, the steps are as follows:
+
 
 \begin{enumerate}
-    \item Convert the measured noise power $10\log_{10}\mathcal{L}(f_k)$\,[dBc/Hz] to $G_\phi(f_k)$\,[$\mathrm{rad^2}$/Hz] using Eq.~(\ref{eq:L_to_G}) (Fig.~\ref{fig:coast1_setting2_b}).
+    \item Convert the measured noise power $10\log_{10}\mathcal{L}(f_k)$\,[dBc/Hz] to $S_{\Delta A, \Delta \phi}(f_k)$, recalling that 
+    
+    %$G_\phi(f_k)$\,[$\mathrm{rad^2}$/Hz] using Eq.~(\ref{eq:L_to_G}) (Fig.~\ref{fig:coast1_setting2_b}).
     \item Re-sample the noise spectrum. The measured noise power values are equally spaced in frequency on a logarithmic scale. A linear interpolation is needed such that they are equally spaced on a linear scale, every $\Delta f = f_s/N$. As already mentioned, since the beam encounters the crab cavities once each turn, $f_s=f_{rev}(=43.38$ kHz for the SPS). To this end, the linear interpolation extends up to $f_s/2$ as illustrated in Fig.~\ref{fig:coast1_setting2_c}. In our simulations, $N=10^5$ turns are used.
     \item Create the positive spectral components of the two-sided power spectrum, $S_\phi$, using Eq.~(\ref{eq:two-sided_2_single-sided}) for $f_k>0$. The result is shown in Fig.~\ref{fig:coast1_setting2_d}.
     \item Compute the amplitude of the spectral components of the Fourier transform, $\left | \fourierxform{\phi}_n(f_k) \right | $ according to Eq.~(\ref{eq:Sxx_definition_discrete_normalized}). It should be noted, however, that this computation is done only for the positive part of the spectrum. Fig.~\ref{fig:coast1_setting2_e} depicts the result of this computation. 
@@ -368,13 +378,13 @@ In the following, the steps required to generate the discrete time series $\alph
 
 \end{enumerate} 
 
-
+%Path to plotting script: cernbox/Project_thesis/scripts_for_simple_figures_plot/measured_psd_to_time_series
 \begin{figure}[!ht]
     \centering
     \begin{subfigure}[t]{0.42\textwidth}
         \centering
-        \includegraphics[width=1\textwidth]{./images/app_B/coast1_setting2_Gyy.png}
-        \caption{Phase noise spectrum measured with a spectrum analyzer E5052B, in units dBc/Hz.}
+        \includegraphics[width=1\textwidth]{./images/app_B/coast1_setting2_v1.png}
+        \caption{Phase noise spectrum measured with a spectrum analyzer E5052B.}
         \label{fig:coast1_setting2_a}
     \end{subfigure}
     \hfill
