add some changes in the introduction

--- a/head/abstract.tex
+++ b/head/abstract.tex
@@ -12,6 +12,12 @@ Thr High-Luminosity LHC (HL-LHC) is the upgrade of the Large Hadron Collider (LH
 Two prototype Crab Cavities have been installed in the Super Proton Synchrotron (SPS), prior to their installation in the LHC, in order to be tested for the first time with proton beams. An important point to consider is the undesired transverse emittance growth due to noise in their RF system. The experimental tests in the SPS showed that the effects of the beam transverse impedance play an important role in the emittance growth driven by Crab Cavity RF noise. This thesis investigates this interplay with detailed tracking simulations and experimental measurements. The implications for the HL-LHC are also discussed.
 
 
+\textcolor{red}{Comments from Andy:}
+Thanks for sending the abstract for your thesis.  I think this looks ok; but mostly it outlines the motivation for the study, and says little about what is actually contained in the thesis.  It might be helpful for a reader to expand a little on the material covered by the thesis.  For example, you could state that the mechanisms for emittance growth from crab cavity rf noise are explored through numerical simulations, and analytical calculations, and you find that without including the effects of impedance, measured emittance growth rates are much larger than predicted by simulation or theory.  When impedance effects are included in the simulations, the results are in much better agreement with experiment.  The simulations including impedance also demonstrate the dependence of the emittance growth suppression on the tune shift with amplitude, which is another feature consistent with experimental observations.
+
+ 
+
+
 %\textbf{Probably put to abstract}\\
 %In 2018, two prototype Crab Cavities (CCs) were installed in the SPS to be tested for the first time with proton beams. A series of dedicated machine developemnt studies was carried out in order to validate their working principle and answer various beam dynamic questions. One of the operational issues that needed to be addressed concerned the expected emittance growth due to noise in their RF system, which is the main subject this thesis.  As mentioned in chapter~\ref{Ch:CC_noise_theory} a theoretical model had already been developed and validated by trackig simulations~\cite{PhysRevSTAB.18.101001}. 
 %As a part of the first experiemental campaign with $\CC$s in SPS a dedicated experiment was conducted to benchmark these models with experimental data and confirm the analytical predictions. The objective of this chapter is to provide an overview of the machine setup for the $\CC$ experiements and introduce the instruments and methods used for measuring the beam parameters of interest for the emittance growth studies.
