--- a/appendix/appendix.tex
+++ b/appendix/appendix.tex
@@ -1,5 +1,5 @@
 \section{Basic terminology}\label{app:statistics_definitions}
-This appendix, introduces the basic terminology of statistical analysis and gives the definitions that are used in this thesis. The definitions follow the book by R. J. Barlow~\cite{lvp.b313005720130101} where one can find a more detailed insight.
+This appendix, introduces the basic terminology of statistical analysis and gives the definitions that are used in this thesis. The definitions follow the book by R. J. Barlow~\cite{lvp.b313005720130101} where one can find a more detailed insight. Note that the use of the parameters $x$ and $y$ in this Appendix is not related to the co-ordinates introduced to describe the motion of the particles in the transverse plane.
 
 \subsection{Averages}
 \normalsize{\textbf{Arithmetic mean}}\\
@@ -59,8 +59,8 @@ The spread in a data set is usually expressed with the standard deviation instea
 
 %When the mean of the data set is zero the standard deviation equals the root mean square.
 
-\normalsize{\textbf{Full width half maximum}}\\
-An alternative measure of the spread is the full width half maximum (FWHM).
+%\normalsize{\textbf{Full width half maximum}}\\
+%An alternative measure of the spread is the full width half maximum (FWHM).
 
 
 \subsection{Data sets with more than one variables - Covariance}
@@ -92,7 +92,7 @@ If the data set is a distribution the covariance matrix is a parameter of the di
 
 
 \section{Least squares fitting}\label{app:non_linear_fitting}
-In sciences, many quantities can not be measured directly but can be inferred from measured data by fitting a model function to them. Common model functions are the Gaussian, polynomial, or sinusoidal. The fitting procedure followed in this thesis is called "least squares" and is described below based on Ref.~\cite{least_square_minimisation}.
+In sciences, many quantities can not be measured directly but can be inferred from measured data by fitting a model function to them. Common model functions are the Gaussian, polynomial, or sinusoidal. The fitting procedure followed in this thesis is called "least squares" and is described below based on~\cite{least_square_minimisation}.
 
 Suppose that we have $N$ data points ($x_{i}, y_{i}$) and that $y=f(x,\alpha, \beta)$ is the model function that describes the relationship between the points. The objective of the fit is to determine the optimal parameters $\alpha, \beta$ such as the model function describes best the data points. This is done by minimising the $\chi^2$ statistics with respect to $\alpha$ and $\beta$:
 \begin{equation}\label{eq:chi_square}
